fix problem with slider caption title not wrapping with break-word rules, third try

--- a/resources/gato-component-feature/css/feature.scss
+++ b/resources/gato-component-feature/css/feature.scss
@@ -47,7 +47,8 @@
         padding: .3rem 1.2rem;
         font-size: 1.8rem;
         transition: all 0.3s ease-in-out;
-        float: left;
+        display: inline-block;
+        max-width: 100%;
       }
 
       p {
